--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -9,4 +9,6 @@ COPY . .
 
 EXPOSE 8501
 
+HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
+
 ENTRYPOINT [ "streamlit", "run", "./app/app.py", "--server.port=8501", "--server.address=0.0.0.0"]
