--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       - postgres-network
     volumes:
       - ./src/db/init.sql:/docker-entrypoint-initdb.d/1-init.sql
-      - ./pgdata:/var/lib/postgresql/data
+      # - ./pgdata:/var/lib/postgresql/data
 
   adminer:
       image: adminer
