--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     build: ./src/frontend
     ports:
       - 80:8501
-    container_name: Frotend-IceCreamEmpire
+    container_name: Frontend-IceCreamEmpire
     networks:
       - postgres-network
     volumes:
@@ -25,7 +25,6 @@ services:
       - postgres-network
     volumes:
       - ./src/db/init.sql:/docker-entrypoint-initdb.d/1-init.sql
-      # - ./pgdata:/var/lib/postgresql/data
 
   adminer:
       image: adminer
